# FastAPI-base-app

./: README.md  docker-compose.yml  pyproject.toml
fastapi-application/: .env.template  alembic.ini  async_attrs_demo.py  create_fastapi_app.py  main.py  run  run_main.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2024_05_09_2202-4810a9cdb58d_create_users_table.py  2024_05_09_2206-ed30a8f17cf4_update_users_table.py  2025_02_02_1921-6f17b7a3c495_remove_unused_user_props.py  2025_08_30_2249-43f1b0af9635_add_created_at_col_to_users_table.py  2025_08_30_2315-b3d90f769b0c_create_uuid_v7_function.py  2025_08_30_2322-b6a07962907c_crete_pets_table.py  2025_10_04_1845-4129c713b4d0_add_is_active_flag_to_users.py  2025_10_04_1850-7417dc7b7ce8_create_addresses_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  users.py
fastapi-application/core/: __init__.py  config.py  fs_broker.py  taskiq_broker.py
fastapi-application/core/gunicorn/: __init__.py  app_options.py  application.py  logger.py
fastapi-application/core/models/: __init__.py  address.py  base.py  db_helper.py  pet.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/crud/: users.py
fastapi-application/fs_subs/: app.py  users.py
fastapi-application/mailing/: send_welcome_email.py
fastapi-application/tasks/: __init__.py  welcome_email_notification.py
fastapi-application/templates/: base.html  index.html
fastapi-application/utils/: __init__.py  case_converter.py
fastapi-application/views/: __init__.py
(+7 files in other folders)
