[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.30.0"
alembic = "^1.13.1"
gunicorn = "^23.0.0"
aiosmtplib = "^3.0.2"
taskiq = "^0.11.17"
taskiq-aio-pika = "^0.4.1"
jinja2 = "^3.1.5"
orjson = "^3.10.18"
taskiq-fastapi = "^0.3.5"
faststream = {extras = ["nats"], version = "^0.6.2"}
typer = "^0.19.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

